crictracker-helmcharts-prod-main/cric-article-local-dev-pm2metricsvc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: local-dev
  name: crictracker-article-local-dev-pm2metric
spec:
#   type: ClusterIp
  selector:
    app: crictracker-article-local-dev
  ports:
    - protocol: TCP
      port: 9209
      targetPort: 9209
