crictracker-helmcharts-prod-main/new-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crictracker-new-dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/actions.redirect-to-media: '{"Type": "redirect", "RedirectConfig":
      { "host": "media.crictracker.com", "Port": "443", "Protocol":"HTTPS", "StatusCode":
      "HTTP_302"}}'
    alb.ingress.kubernetes.io/actions.response-401: |
      {"type":"fixed-response","fixedResponseConfig":{"Port":"443","Protocol":"HTTPS","ContentType":"text/html","StatusCode":"401","MessageBody":"<!DOCTYPE html><html> <head> <title>Unauthorized Access</title> </head> <body> <h1>Oops!</h1> <p> Hold it right there, buddy! You're not authorized to access this page. Did you forget to bring your permission slip?</p> </body></html>"}}
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:693583001687:certificate/a98e8d06-f891-4338-9143-1220fa55592c
    alb.ingress.kubernetes.io/group.name: crictracker-devstag-new
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "14"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "8"
    alb.ingress.kubernetes.io/healthy-threshold-count: "3"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true,idle_timeout.timeout_seconds=58
    alb.ingress.kubernetes.io/load-balancer-name: ct-devstage-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-077b67cb6983824ae, subnet-079a2bebf229cbae2
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=70,slow_start.duration_seconds=30
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: feed-dev.beta.crictracker.com, help-dev.beta.crictracker.com,
      globalwidget-dev.beta.crictracker.com, gateway-dev.beta.crictracker.com, admin-dev.beta.crictracker.com,
      cricweb-dev.beta.crictracker.com, article-dev.beta.crictracker.com, auth-dev.beta.crictracker.com,
      matchmanage-dev.beta.crictracker.com, seo-dev.beta.crictracker.com, career-dev.beta.crictracker.com,
      migrations-dev.beta.crictracker.com, subscription-dev.beta.crictracker.com,
      redis-server-dev.beta.crictracker.com, feed-api-dev.beta.crictracker.com
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        pathType: ImplementationSpecific
  - host: help-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-help-dev
            port:
              number: 4005
        path: /*
        pathType: ImplementationSpecific
  - host: globalwidget-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-global-widget-dev
            port:
              number: 4006
        path: /*
        pathType: ImplementationSpecific
  - host: gateway-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-gateway-dev
            port:
              number: 4000
        path: /*
        pathType: ImplementationSpecific
  - host: admin-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-admin-frontend-dev
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: cricweb-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-image-website-dev
            port:
              number: 3000
        path: /_next/image/
        pathType: ImplementationSpecific
      - backend:
          service:
            name: redirect-to-media
            port:
              name: use-annotation
        path: /wp-content/*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-website-dev
            port:
              number: 3000
        path: /*
        pathType: ImplementationSpecific
  - host: article-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-article-dev
            port:
              number: 4002
        path: /*
        pathType: ImplementationSpecific
  - host: auth-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-authentication-dev
            port:
              number: 4001
        path: /*
        pathType: ImplementationSpecific
  - host: matchmanage-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-matchmanagement-dev
            port:
              number: 4004
        path: /*
        pathType: ImplementationSpecific
  - host: seo-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-seo-dev
            port:
              number: 4003
        path: /*
        pathType: ImplementationSpecific
  - host: career-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-career-dev
            port:
              number: 4007
        path: /*
        pathType: ImplementationSpecific
  - host: migrations-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-migrations-dev
            port:
              number: 5001
        path: /*
        pathType: ImplementationSpecific
  - host: subscription-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-subscription-dev
            port:
              number: 5000
        path: /*
        pathType: ImplementationSpecific
  - host: redis-server-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-redis-server-dev
            port:
              number: 4008
        path: /*
        pathType: ImplementationSpecific
  - host: feed-api-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-feed-dev
            port:
              number: 4009
        path: /*
        pathType: ImplementationSpecific
  - host: feed-dev.beta.crictracker.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: crictracker-feed-frontend-dev
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - http:
      paths:
      - backend:
          service:
            name: response-401
            port:
              name: use-annotation
        path: /.env
        pathType: ImplementationSpecific
  - http:
      paths:
      - backend:
          service:
            name: response-401
            port:
              name: use-annotation
        path: /wp-admin
        pathType: ImplementationSpecific
  - http:
      paths:
      - backend:
          service:
            name: response-401
            port:
              name: use-annotation
        path: /Core/Skin/Login.aspx
        pathType: ImplementationSpecific
  - http:
      paths:
      - backend:
          service:
            name: response-401
            port:
              name: use-annotation
        path: /wp-login.php
        pathType: ImplementationSpecific
  - http:
      paths:
      - backend:
          service:
            name: response-401
            port:
              name: use-annotation
        path: /sitemap_index.xml
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
